    and the new SONAME library filenames.
  * Remove unused blocks KTp/ktp-export.h and po/* from copyright file.
  * Rename liblktpcommoninterals-dev to libktp-dev
  * Rename kde-telepathy-declarative to qml-module-org-kde-telepathy
  * Add kde-telepathy-kaccounts package.
  * Use --fail-missing to make it easier to find not installed files.
  * Switch to --with kf5. Update several plugin paths to $arch/qt5/plugin.
  * Rename libktpcommoninternals-dbg to libktp-dbg to match -dev file

 -- Diane Trout <diane@debian.org>  Sat, 04 Jul 2015 09:50:32 -0700

ktp-common-internals (0.9.0-1) unstable; urgency=medium

  [ Jonathan Riddell ]
  * New upstream release
  * Merge with Debian, no changes
  * Make -dev package depend on libktpotrprivate8
  * kde-telepathy-kpeople breaks/replaces old kde-telepathy-data

  [ Diane Trout ]
  * Pull changes from Kubuntu.
  * Update libktpcommoninternalsprivate7 SONAME to 8
    - libktploggerprivate7 -> libktploggerprivate8
    - libktpmodelsprivate7 -> libktpmodelsprivate8
    - libktpwidgetsprivate7 -> libktpwidgetsprivate8
  * Bump libtelepathy-qt4-dev build-depends to 0.9.5
  * Remove shared-desktop-ontolgies build-dep
  * Bump libkpeople build-dep to 0.3.0
  * Add libotr5-dev and libgcrypt11-dev build-dep to enable OTR support.
  * Add kpeople_chat_plugin.so and associated desktop file to 
    kde-telepathy-kpeople package.
  * Update copyright file.
  * Update description to use better English (Closes: #769362)
    Thanks Filipus Klutiero
  * Update Standards-Version to 3.9.6.0. No changes needed.
  * Update debian/watch file.

 -- Diane Trout <diane@ghic.org>  Sat, 25 Apr 2015 19:30:59 -0700

ktp-common-internals (0.8.1-4) unstable; urgency=medium

  * Make sure telepathy-logger is installed (Closes: #774552)

 -- Diane Trout <diane@ghic.org>  Sun, 11 Jan 2015 21:19:37 -0800

ktp-common-internals (0.8.1-3) unstable; urgency=medium

  * Update kde-telepathy-kpeople description.